[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://GameOverMenu.gd" type="Script" id=3]

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 114.0
margin_top = 101.0
margin_right = 485.0
margin_bottom = 197.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 203.0
margin_top = 106.0
margin_right = 396.0
margin_bottom = 192.0

[node name="Button" parent="VBoxContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 193.0
margin_bottom = 26.0
text = "Play Again"
default_for_focus = true

[node name="Button2" parent="VBoxContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 30.0
margin_right = 193.0
margin_bottom = 56.0
text = "Return to Main Menu"

[node name="Button3" parent="VBoxContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 60.0
margin_right = 193.0
margin_bottom = 86.0
text = "Exit"
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="toggled" from="VBoxContainer/CenterContainer2/VBoxContainer/Button2" to="." method="_on_Button2_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="toggled" from="VBoxContainer/CenterContainer2/VBoxContainer/Button3" to="." method="_on_Button3_toggled"]
